[gd_scene load_steps=2 format=3 uid="uid://menu_uuid_001"]

[ext_resource type="Script" path="res://core/Menu.gd" id="1_menu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PROJECT ARC"
horizontal_alignment = 1

[node name="BtnLocal" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Local"

[node name="BtnPractice" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Practice"

[node name="LineEditIP" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
placeholder_text = "127.0.0.1"
alignment = 1

[node name="BtnHost" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Host Game"

[node name="BtnJoin" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Join Game"

[node name="BtnQuit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnLocal" to="." method="_on_btn_local_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnPractice" to="." method="_on_btn_practice_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnHost" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnJoin" to="." method="_on_btn_join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
